kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  selector:
    matchLabels:
      app: kubernetes-app
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-app
    spec:
      containers:
      - name: app
        image: ${docker-id}/kubernetes-lab/app:0.0.1
        ports:
        - containerPort: 8080
