kubernetes/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: kubernetes-app
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
